--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -90,27 +90,27 @@ pds_all_totals_2 <- bind_rows(pds_all_totals,
   pds_all %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
 )
 
-pds_all_totals_2$age_grp_2<- factor(pds_all_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+pds_all_totals_2$age_grp_2<- factor(pds_all_totals_2$age_grp_2, levels = c("All", "85+", "80 to 84" ,"79 and Under"))
 
 pds_ijb_totals_2 <- bind_rows(pds_ijb_totals,
     pds_ijb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
 )
 
-pds_ijb_totals_2$age_grp_2<- factor(pds_ijb_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+pds_ijb_totals_2$age_grp_2<- factor(pds_ijb_totals_2$age_grp_2, levels = c("All", "85+", "80 to 84" ,"79 and Under"))
 
 
 pds_hb_totals_2 <- bind_rows(pds_hb_totals,
     pds_hb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
 )
 
-pds_hb_totals_2$age_grp_2<- factor(pds_hb_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+pds_hb_totals_2$age_grp_2<- factor(pds_hb_totals_2$age_grp_2, levels = c("All", "85+", "80 to 84" ,"79 and Under"))
 
 
 pds_scot_totals_2 <- bind_rows(pds_scot_totals,
     pds_scot %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
 )
 
-pds_scot_totals_2$age_grp_2<- factor(pds_scot_totals_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
+pds_scot_totals_2$age_grp_2<- factor(pds_scot_totals_2$age_grp_2, levels = c("All", "85+", "80 to 84" ,"79 and Under"))
 
 #load population rates data
 pop_data <- read_rds("//conf/dementia/A&I/Outputs/management-report/lookups/pop_data.rds")
@@ -136,7 +136,7 @@ if(qt == 4){full_years = all_years}else{full_years = all_years[-length(all_years
 
 ```{r data-setup-demo, include=FALSE}
 
-#prepare age data for LARGE AGE GROUPS
+#prepare age data 
 ldp_all_age_2 <- pds_all %>%
   filter(fy %in% full_years, age_grp_2 != "Unknown") %>%
   group_by(geog, fy, age_grp_2, ldp) %>%
@@ -149,14 +149,14 @@ ldp_all_age_2 <- left_join(ldp_all_age_2,
 ldp_all_age_2 %>% filter(geog == "Scotland") %>% select(fy, age_grp_2, perc_met) %>% 
   rename(scot_perc_met = perc_met))
 
-ldp_all_age_2$age_grp_2<- factor(ldp_all_age_2$age_grp_2, levels = c("65+", "64 and Under"))
+ldp_all_age_2$age_grp_2<- factor(ldp_all_age_2$age_grp_2, levels = c("85+", "80 to 84" ,"79 and Under"))
 
 pds_all_age_2 <- pds_all %>% filter(age_grp_2 != "Unknown") #remove 6 unknowns from 2016/17 (add note to charts and tables?)
 
 pds_all_age_2 %<>% group_by(fy, geog, age_grp_2) %>%
   summarise(total_referrals = sum(referrals), .groups = "drop")
 
-#prepare population rate data with large age groups
+#prepare population rate data 
 
 pop_data_age_2 <- pop_data %>% filter(sex == "All", age_grp == "All") %>% select(-sex, -age_grp)
 
@@ -167,7 +167,7 @@ pds_all_age_2_rates <- left_join(pds_all_age_2_cal_year, pop_data_age_2) %>% sel
   mutate(pop_rate_10000 = round((total_referrals/pop_est)*10000, 1)) %>% select(fy, geog, age_grp_2, pop_rate_10000)
 
 pds_all_age_2_rates$geog<- factor(pds_all_age_2_rates$geog, levels = unique(pds_all_age_2_rates$geog)) 
-pds_all_age_2_rates$age_grp_2<- factor(pds_all_age_2_rates$age_grp_2, levels = c("65+", "64 and Under"))
+pds_all_age_2_rates$age_grp_2<- factor(pds_all_age_2_rates$age_grp_2, levels = c("85+", "80 to 84" ,"79 and Under"))
 
 pds_all_age_2_rates %<>% complete(nesting(fy, geog), age_grp_2, fill = list(pop_rate_10000 = 0)) 
 
@@ -198,7 +198,8 @@ pds_all_sex$sex<- factor(pds_all_sex$sex, levels = c("Male", "Female"))
 
 #prepare population rate data for gender
 
-pop_data_sex <- pop_data %>% filter(age_grp == "All", age_grp_2 == "65+", sex != "All") %>% select(-age_grp, -age_grp_2) %>% mutate(sex = substring(sex, 4))
+pop_data_sex <- pop_data %>% filter(age_grp != "All", age_grp != "59 and Under", age_grp != "60 to 64", age_grp_2 == "All", sex != "All") %>% select(-age_grp_2) %>% mutate(sex = substring(sex, 4)) %>% 
+  group_by(geog, year, sex) %>% summarise(pop_est = sum(pop_est)) %>% ungroup()
 
 pds_all_sex_cal_year <- pds_all_sex %>% 
   mutate(year = as.numeric(substr(fy, 1, 4)))
@@ -238,7 +239,8 @@ complete(nesting(geog, fy), simd, fill = list(total_referrals = 0))
 #prepare population rate data for simd
 simd_pop_data <- read_rds("//conf/dementia/A&I/Outputs/management-report/lookups/simd_pop_data.rds")
 
-pop_data_simd <- simd_pop_data %>% filter(sex == "All", age_grp == "All", age_grp_2 == "65+") %>% select(-sex, -age_grp, -age_grp_2)
+pop_data_simd <- simd_pop_data %>% filter(age_grp != "All", age_grp != "59 and Under", age_grp != "60 to 64", age_grp_2 == "All", sex != "All") %>% select(-age_grp_2, -sex) %>% 
+  group_by(geog, year, simd) %>% summarise(pop = sum(pop)) %>% ungroup()
 
 pds_all_simd_cal_year <- pds_all_simd %>% 
   mutate(year = as.numeric(substr(fy, 1, 4)))
@@ -364,17 +366,23 @@ plot_geog_bar_v2(pds_pop_age_data_ijb, y_value = pop_rate_10000, measure = age_g
 ```{r table-ijb-age-pop}
 
 ijb_pop_age_table_data <- bind_rows(
-  pds_all_age_2_rates %>% filter(!grepl("NHS", geog)) %>% 
+ pds_all_age_2_rates %>% filter(!grepl("NHS", geog)) %>% 
   select(geog,fy,age_grp_2,pop_rate_10000)  %>% 
      mutate(pop_rate_10000 = as.character(pop_rate_10000)) %>%
   pivot_wider(names_from =age_grp_2, values_from = pop_rate_10000) %>% 
-    mutate(age_2_group = "65+", .before = fy),
+    mutate(age_2_group = "85+", .before = fy),
   
-  pds_all_age_2_rates %>% 
-  select(geog,fy,age_grp_2,pop_rate_10000) %>% filter(!grepl("NHS", geog)) %>% 
+  pds_all_age_2_rates %>% filter(!grepl("NHS", geog)) %>% 
+  select(geog,fy,age_grp_2,pop_rate_10000) %>% 
      mutate(pop_rate_10000 = as.character(pop_rate_10000)) %>%
   pivot_wider(names_from =age_grp_2, values_from = pop_rate_10000) %>% 
-    mutate(age_2_group = "64 and Under", .before = fy)
+    mutate(age_2_group = "80 to 84", .before = fy),
+ 
+ pds_all_age_2_rates %>% filter(!grepl("NHS", geog)) %>% 
+  select(geog,fy,age_grp_2,pop_rate_10000) %>% 
+     mutate(pop_rate_10000 = as.character(pop_rate_10000)) %>%
+  pivot_wider(names_from =age_grp_2, values_from = pop_rate_10000) %>% 
+    mutate(age_2_group = "79 and Under", .before = fy)
 ) %>% 
  
   mutate(key = paste0(fy,age_2_group), .before = geog) %>% 
@@ -396,7 +404,7 @@ DT::datatable(ijb_age_table_pop, rownames = FALSE,
                              dom = "tB",
                              ordering = FALSE,
                              columnDefs = list(list(visible = FALSE, targets = c(0,2,3)),
-                                               list(className = 'dt-right', targets = 4:5)
+                                               list(className = 'dt-right', targets = 4:6)
                                                ))) %>%
            DT::formatStyle(2, fontWeight = "bold", #padding = "4px"
                           )
@@ -459,13 +467,19 @@ hb_pop_age_table_data <- bind_rows(
   select(geog,fy,age_grp_2,pop_rate_10000)  %>% 
      mutate(pop_rate_10000 = as.character(pop_rate_10000)) %>%
   pivot_wider(names_from =age_grp_2, values_from = pop_rate_10000) %>% 
-    mutate(age_2_group = "65+", .before = fy),
+    mutate(age_2_group = "85+", .before = fy),
   
-  pds_all_age_2_rates %>% 
-  select(geog,fy,age_grp_2,pop_rate_10000) %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
+    pds_all_age_2_rates %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
+  select(geog,fy,age_grp_2,pop_rate_10000)  %>% 
      mutate(pop_rate_10000 = as.character(pop_rate_10000)) %>%
   pivot_wider(names_from =age_grp_2, values_from = pop_rate_10000) %>% 
-    mutate(age_2_group = "64 and Under", .before = fy)
+    mutate(age_2_group = "80 to 84", .before = fy),
+  
+  pds_all_age_2_rates %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
+  select(geog,fy,age_grp_2,pop_rate_10000) %>% 
+     mutate(pop_rate_10000 = as.character(pop_rate_10000)) %>%
+  pivot_wider(names_from =age_grp_2, values_from = pop_rate_10000) %>% 
+    mutate(age_2_group = "79 and Under", .before = fy)
 ) %>% 
  
   mutate(key = paste0(fy,age_2_group), .before = geog) %>% 
@@ -486,7 +500,7 @@ DT::datatable(hb_age_table_pop, rownames = FALSE, extensions = "FixedColumns",
                              dom = "t",
                              ordering = FALSE,
                              columnDefs = list(list(visible = FALSE, targets = c(0,2,3)),
-                                               list(className = 'dt-right', targets = 4:5)
+                                               list(className = 'dt-right', targets = 4:6)
                                                ))) %>%
            DT::formatStyle(2, fontWeight = "bold", #padding = "4px"
                           )
@@ -533,7 +547,7 @@ plot_rate_line_legend_1(legend_data)),NULL
 
 bscols(widths = 12,
   div(style = css(width="98%", height="370px"),
-plot_rate_line(pds_pop_age_2_data, measure = age_grp_2, measure_text = "Age Group: ", y = "Rate per 10,000 Population", scales = "free_y"))
+plot_rate_line(pds_pop_age_2_data, measure = age_grp_2, measure_text = "Age Group: ", y = "Rate per 10,000 Population", scales = "free_y", facet_space = -5))
 )
 
 ```
@@ -550,7 +564,7 @@ trend_pop_age_2_table <- SharedData$new(trend_pop_age_2_table_data, key = ~geog,
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="130px", margin="20px"),
+       div(style = css(width="97%", height="170px", margin="20px"),
 DT::datatable(trend_pop_age_2_table, rownames = FALSE, selection = 'none',
               options = list(pageLength = 10,
                              scrollX = TRUE,
@@ -656,7 +670,7 @@ ijb_age_ldp_data <- ldp_all_age_2 %>% filter(!grepl("NHS", geog)) %>%
   select(geog,fy,age_grp_2,perc_met) %>% 
    mutate(perc_met = if_else(is.na(perc_met), as.character(perc_met), paste0(perc_met, "%"))) %>% 
    pivot_wider(names_from = age_grp_2, values_from = perc_met) %>%
-  select(fy,geog,`65+`,`64 and Under`) %>% 
+  select(fy,geog,`85+`, `80 to 84`, `79 and Under`) %>% 
   mutate(across(everything(), ~replace_na(.x, "-"))) %>% 
    mutate(type = "% Met Standard/Exempt", .after = geog)
 
@@ -665,7 +679,7 @@ ijb_age_totals_data <- pds_all_age_2 %>% filter(!grepl("NHS", geog)) %>%
   pivot_wider(names_from = age_grp_2, values_from = total_referrals) %>%
   mutate(across(everything(), ~replace_na(.x, 0))) %>% 
   mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
-  relocate(`65+`, .before = `64 and Under`) %>% 
+  relocate(`80 to 84`, .before = `79 and Under`) %>%  relocate(`85+`, .before = `80 to 84`) %>% 
      mutate(type = "Number of Referrals", .after = geog)
 
 
@@ -687,7 +701,7 @@ DT::datatable(ijb_age_table_ldp, rownames = FALSE, #extensions = "FixedColumns",
                              dom = "t",
                              ordering = FALSE,
                              columnDefs = list(list(visible = FALSE, targets = 0),
-                                               list(className = 'dt-right', targets = 3:4)
+                                               list(className = 'dt-right', targets = 3:5)
                              ))) %>%
   DT::formatStyle(2:3, fontWeight = "bold",# padding = "4px"
   )
@@ -744,7 +758,7 @@ hb_age_ldp_data <- ldp_all_age_2 %>% filter(geog == "Scotland" | grepl("NHS", ge
   select(geog,fy,age_grp_2,perc_met) %>% 
    mutate(perc_met = if_else(is.na(perc_met), as.character(perc_met), paste0(perc_met, "%"))) %>% 
    pivot_wider(names_from = age_grp_2, values_from = perc_met) %>%
-  select(fy,geog,`65+`,`64 and Under`) %>% 
+  select(fy,geog,`85+`, `80 to 84`, `79 and Under`) %>% 
   mutate(across(everything(), ~replace_na(.x, "-"))) %>% 
    mutate(type = "% Met Standard/Exempt", .after = geog)
 
@@ -752,7 +766,7 @@ hb_age_totals_data <- pds_all_age_2 %>% filter(geog == "Scotland" | grepl("NHS",
   pivot_wider(names_from = age_grp_2, values_from = total_referrals) %>%
   mutate(across(everything(), ~replace_na(.x, 0))) %>% 
   mutate(across(where(is.numeric), ~format(., big.mark = ","))) %>% 
-  relocate(`65+`, .before = `64 and Under`) %>% 
+ relocate(`80 to 84`, .before = `79 and Under`) %>%  relocate(`85+`, .before = `80 to 84`) %>% 
      mutate(type = "Number of Referrals", .after = geog)
 
 
@@ -774,7 +788,7 @@ DT::datatable(hb_age_table_ldp, rownames = FALSE, #extensions = "FixedColumns",
                              dom = "t",
                              ordering = FALSE,
                              columnDefs = list(list(visible = FALSE, targets = 0),
-                                               list(className = 'dt-right', targets = 3:4)
+                                               list(className = 'dt-right', targets = 3:5)
                                                ))) %>%
            DT::formatStyle(2:3, fontWeight = "bold", #padding = "4px"
                           )
@@ -849,7 +863,7 @@ ldp_age_2_table <- SharedData$new(ldp_age_2_table_data, key = ~geog, group = "ld
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="200px", margin="20px"),
+       div(style = css(width="97%", height="280px", margin="20px"),
 DT::datatable(ldp_age_2_table, rownames = FALSE, selection = 'none',
               options = list(pageLength = 10,
                              scrollX = TRUE,
@@ -907,7 +921,7 @@ Row
 <!-- **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.** -->
 
 
-Row {.tabset data-height=1020}
+Row {.tabset data-height=1010}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
@@ -1465,7 +1479,7 @@ Row
 <!-- **Please note that both the Dementia Post Diagnostic Support service provision and data submission to PHS were affected by the COVID-19 pandemic.** -->
 
 
-Row {.tabset data-height=1000}
+Row {.tabset data-height=1020}
 ----------------------------------------------------------------------
 
 ### **Integration Authority Areas**
@@ -1757,7 +1771,7 @@ plot_rate_line_legend_1(legend_data)),NULL
 ```{r plot-trend-simd-pop}
 
 bscols(widths = 12,
-  div(style = css(width="98%", height="370px"),
+  div(style = css(width="98%", height="340px"),
 plot_rate_line(pds_pop_simd_data, measure = simd, measure_text = "SIMD Quintile: ", y = "Rate per 10,000 Population", colours = simd_colours))
 )
 
@@ -2134,7 +2148,7 @@ hb_simd_table_ldp <- SharedData$new(hb_ldp_simd_table_data, key = ~key, group = 
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="460px", margin="20px"),
+       div(style = css(width="97%", height="430px", margin="20px"),
 DT::datatable(hb_simd_table_ldp, rownames = FALSE, selection = "none", #extensions = "FixedColumns",
               options = list(pageLength = 30,
                              scrollX = TRUE,
@@ -2222,7 +2236,7 @@ ldp_simd_table <- SharedData$new(ldp_simd_table_data, key = ~geog, group = "ldp_
 
 
 bscols(widths = 12,
-       div(style = css(width="97%", height="430px", margin="20px", marginTop="-10px"),
+       div(style = css(width="97%", height="460px", margin="20px", marginTop="-10px"),
 DT::datatable(ldp_simd_table, rownames = FALSE, selection = 'none',
               options = list(pageLength = 10,
                              scrollX = TRUE,
@@ -2323,7 +2337,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_ijb_age_pop_group").getElementsByClassName("selectized") 
-  [0].selectize.setValue("65+", false);
+  [0].selectize.setValue("85+", false);
 
   document.getElementById("filter_ijb_age_pop_group").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
@@ -2335,7 +2349,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_hb_age_pop_group").getElementsByClassName("selectized") 
-  [0].selectize.setValue("65+", false);
+  [0].selectize.setValue("85+", false);
 
   document.getElementById("filter_hb_age_pop_group").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
